--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,5 @@
+###############################################
+#Use this file for env not the template
+###############################################
+
 
