--- a/api/.env
+++ b/api/.env
@@ -3,3 +3,10 @@
 ###############################################
 
 
+SECRET_KEY=someCrazyS3cR3T!Key.!
+DB_USER=root
+DB_HOST=db
+DB_PORT=3306
+#change data base name
+DB_NAME=northwind
+MYSQL_ROOT_PASSWORD= Starflow
