--- a/api/.env
+++ b/api/.env
@@ -7,6 +7,6 @@ SECRET_KEY=someCrazyS3cR3T!Key.!
 DB_USER=root
 DB_HOST=db
 DB_PORT=3306
-#change data base name
+#2:15 Project part 2, we don't need to change database name only password 
 DB_NAME=northwind
 MYSQL_ROOT_PASSWORD= Starflow
