--- a/api/.env
+++ b/api/.env
@@ -8,5 +8,5 @@ DB_USER=root
 DB_HOST=db
 DB_PORT=3306
 #2:15 Project part 2, we don't need to change database name only password 
-DB_NAME=northwind
+DB_NAME=ArtPlatformDB
 MYSQL_ROOT_PASSWORD= Starflow
